[project]
name = "data-engineering-mentor"
version = "0.1.0"
description = "AI-first daily practice environment for mid and senior data engineers — Socratic challenges, not a course."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
# This is an application (a set of scripts), not an installable library, so uv
# manages only the dependencies — it doesn't try to build/install the project.
package = false
